--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
-    "start": "node build/server.js",
+    "start": "npm run build && node build/server.js",
     "clean": "rm -rf dist"
   },
   "dependencies": {
